--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 FROM mshafae/tusk-jammy
-RUN apt-get update && apt-get install -y libasio-dev
-RUN apt-get update && apt-get install -y libboost-dev
+RUN apt-get install -y libasio-dev
+
